[gd_scene load_steps=10 format=3 uid="uid://buhrf2hfo6h8m"]

[ext_resource type="Script" uid="uid://b8byecqdgu2qt" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://bpd888qe20qut" path="res://scenes/front.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://cx1xbmf7708wb" path="res://scenes/back.tscn" id="3_lnu2h"]
[ext_resource type="AudioStream" uid="uid://dghojw6xokux7" path="res://sound/Lana Works In The Mailroom.mp3" id="4_lbhrr"]
[ext_resource type="AudioStream" uid="uid://c8jcon7w6f0ro" path="res://sound/Whoosh.mp3" id="5_iywne"]

[sub_resource type="Animation" id="Animation_lbhrr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lnu2h"]
resource_name = "away"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1920, 0)]
}

[sub_resource type="Animation" id="Animation_iywne"]
resource_name = "back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1920, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iywne"]
_data = {
&"RESET": SubResource("Animation_lbhrr"),
&"away": SubResource("Animation_lnu2h"),
&"back": SubResource("Animation_iywne")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="Front" parent="." instance=ExtResource("2_yqjtg")]
unique_name_in_owner = true
z_index = 10

[node name="Back" parent="." instance=ExtResource("3_lnu2h")]
unique_name_in_owner = true

[node name="GameAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_iywne")
}

[node name="Sound" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("4_lbhrr")
volume_db = -10.0
pitch_scale = 0.8
autoplay = true

[node name="Whoosh" type="AudioStreamPlayer" parent="Sound"]
unique_name_in_owner = true
stream = ExtResource("5_iywne")
volume_db = -30.0
pitch_scale = 0.6

[connection signal="switch_to_back" from="." to="Back" method="_on_game_switch_to_back"]
[connection signal="switch_to_front" from="." to="Front" method="_on_game_switch_to_front"]
[connection signal="switch_to_front" from="." to="Back" method="_on_game_switch_to_front"]
[connection signal="start_order" from="Front" to="." method="_on_front_start_order"]
[connection signal="order_finished" from="Back" to="." method="_on_back_order_finished"]
[connection signal="animation_finished" from="GameAnimationPlayer" to="." method="_on_game_animation_player_animation_finished"]
